--- a/main.css
+++ b/main.css
@@ -1,1 +1,106 @@
 /* Write your CSS code in this file */
+
+
+
+ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  img {
+    display: inline;
+  }
+  
+  /* For the div that contains our full application/game */
+  #app {
+    width: 60%;
+    margin: 50px auto;
+    background-color: rgba(256, 256, 256, 0.5)
+  }
+  
+  /* For the div that contains our input element and button element */
+  #input-parent {
+    margin: 5% auto;
+    position: relative;
+    width: 20vw; /* sets the width of the object outside the search box */
+    padding: 20vw;
+    font-weight: 5;
+    text-align: center;
+    padding: .6em 0 0 0;
+    font-family: 'Helvetica', serif;
+  }
+  
+  /* For the input element */
+  #player-input {
+    position: relative;
+    padding-bottom: 5px;
+    border-width: 0.5vw;
+    border-color: rgb(32, 9, 0);
+    border-style: groove;
+    margin: 0vw auto;
+    cursor: none;
+    text-decoration:  double underline rgb(10, 1, 1);;
+    width: 10vw;
+    height: 10vw;
+    font-size: 500%;
+    color: green; /* color of an element's text */
+    background-color: black; /* sets the background color of an element */
+    text-align: center;
+    box-shadow: 2px 2px 2px 2px #2d0a31;
+    display: inline-flex;
+
+  }
+  
+  /* For the button that says 'Go!' */
+  #submit {
+    border-radius: 50%;
+    height: 3vw;
+    width: 3vw;
+    left: 0.5vw;
+    top: 3vw;
+    position: relative;
+  }
+  
+  /* For the last div in the project, that says who made the game */
+  #footer {
+    width: 100%;
+    border-top: solid 2px black;
+    background-color: rgb(17, 9, 16);
+    position: fixed;
+    bottom: 0;
+
+  }
+  
+  /* Adding the class 'center' will center the text inside the div */
+  .center {
+    text-align: center;
+  }
+  
+  /* Add the 'guess' class to each list element (li element) */
+  .guess {
+    background-color: white;
+    border-radius: 15%;
+    display: inline;
+    font-size: 60px;
+    padding: 0 25px;
+  }
+
+/* not included in the official solution */
+
+  #display {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;*/
+    /* height: 600px; */
+    height: 50vw;
+
+  }
+  body {
+    background-image: url('1800x900-24.png');
+    max-width: 100vw;
+	padding: 0;
+	font-family: 'Georgia', sans-serif;
+	background-repeat: repeat;
+	background-size: 100% 100%;
+	background-attachment: fixed;
+  }  
