--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ ul {
   /* For the div that contains our full application/game */
   #app {
     width: 60%;
-    margin: 50px auto;
+    margin: 5vw auto;
     background-color: rgba(256, 256, 256, 0.5)
   }
   
@@ -27,13 +27,12 @@ ul {
     font-weight: 5;
     text-align: center;
     padding: .6em 0 0 0;
-    font-family: 'Helvetica', serif;
+    font-family: 'Georgia', serif;
   }
   
   /* For the input element */
   #player-input {
     position: relative;
-    padding-bottom: 5px;
     border-width: 0.5vw;
     border-color: rgb(32, 9, 0);
     border-style: groove;
@@ -42,8 +41,8 @@ ul {
     text-decoration:  double underline rgb(10, 1, 1);;
     width: 10vw;
     height: 10vw;
-    font-size: 500%;
-    color: green; /* color of an element's text */
+    font-size: 6vw;
+    color: rgb(255, 247, 255); /* color of an element's text */
     background-color: black; /* sets the background color of an element */
     text-align: center;
     box-shadow: 2px 2px 2px 2px #2d0a31;
@@ -53,19 +52,20 @@ ul {
   
   /* For the button that says 'Go!' */
   #submit {
-    border-radius: 50%;
+    border-radius: 500vw;
     height: 3vw;
     width: 3vw;
     left: 0.5vw;
     top: 3vw;
     position: relative;
+    font-size: 1vw;
   }
   
   /* For the last div in the project, that says who made the game */
   #footer {
     width: 100%;
     border-top: solid 2px black;
-    background-color: rgb(17, 9, 16);
+    background-color: rgb(240, 240, 240);
     position: fixed;
     bottom: 0;
 
@@ -74,33 +74,34 @@ ul {
   /* Adding the class 'center' will center the text inside the div */
   .center {
     text-align: center;
+    color: rgb(36, 36, 36);
+    font-size: 1vw;
   }
   
   /* Add the 'guess' class to each list element (li element) */
   .guess {
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 15%;
     display: inline;
-    font-size: 60px;
-    padding: 0 25px;
+    font-size: 5vw;
+    padding-right: 2vw;
+    padding-left: 2vw;
+    padding-bottom: 0.5vw;
   }
 
-/* not included in the official solution */
-
-  #display {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center;*/
-    /* height: 600px; */
-    height: 50vw;
-
-  }
   body {
-    background-image: url('1800x900-24.png');
+    background-image: linear-gradient(to right, rgb(143, 255, 255),rgb(255, 250, 204),rgb(143, 255, 255));
     max-width: 100vw;
 	padding: 0;
 	font-family: 'Georgia', sans-serif;
 	background-repeat: repeat;
 	background-size: 100% 100%;
 	background-attachment: fixed;
-  }  
+  }
+  
+  /* Extend the length of the display box */
+  #guess-list {
+      height: 10vw;
+  }
+
+
