--- a/main.css
+++ b/main.css
@@ -53,11 +53,37 @@ ul {
   /* For the button that says 'Go!' */
   #submit {
     border-radius: 500vw;
-    height: 3vw;
-    width: 3vw;
+    height: 2vw;
+    width: 2.8vw;
     left: 0.5vw;
     top: 3vw;
     position: relative;
+    font-size: 1vw;
+  }
+
+  /* For the button that says 'Reset' */
+  #reset {
+    border-style: inset;
+    border-radius: 600vw;
+    height: 2vw;
+    width: 3.8vw;
+    left: 0.5vw;
+    position: absolute;
+    left: 14.7vw;
+    top: 7.5vw;
+    font-size: 1vw;
+  }
+
+  /* For the button that says 'Hint' */
+  #hint {
+    border-style: inset;
+    border-radius: 600vw;
+    height: 2vw;
+    width: 3.8vw;
+    left: 0.5vw;
+    position: absolute;
+    left: 14.7vw;
+    top: 5vw;
     font-size: 1vw;
   }
   
@@ -92,11 +118,11 @@ ul {
   body {
     background-image: linear-gradient(to right, rgb(143, 255, 255),rgb(255, 250, 204),rgb(143, 255, 255));
     max-width: 100vw;
-	padding: 0;
-	font-family: 'Georgia', sans-serif;
-	background-repeat: repeat;
-	background-size: 100% 100%;
-	background-attachment: fixed;
+    padding: 0;
+    font-family: 'Georgia', sans-serif;
+    background-repeat: repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
   }
   
   /* Extend the length of the display box */
